--- a/slides.Rmd
+++ b/slides.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Presentation title"
-subtitle: "Presentation subtitle"
-author: 'Name <br> Organisation <br>'
-date: "Date <br><br> Slides: url to slides"
+title: "Reproducible Analytical Pipelines for Health and Social Care Publications"
+subtitle: "RSS Annual Conference 2019"
+author: 'Jack Hannah & David Caldwell <br> NHS National Services Scotland <br>'
+date: "3 September 2019 <br><br> Slides: https://github.com/jackhannah95/rss-2019"
 output:
   ioslides_presentation:
     css: my-theme.css
@@ -16,47 +16,75 @@ library(kableExtra)
 
 knitr::opts_chunk$set(echo = FALSE)
 
-# Create data frame for table
-table_contents <- data.frame(c("Text", "Text",
-                               "Text", "Text",
-                               "Text"),
-                             c(1:5))
+# Create data frame for levels of automation table
+automation_levels <- data.frame(c(1:3, c("4a", "4b"), 5:7),
+                                c("Ad hoc R code",
+                                  "R project",
+                                  "R project under version control (VC)",
+                                  "R project under VC and peer reviewed (wrangling)",
+                                  "Replicable report in Rmarkdown (publication)",
+                                  "Near RAP (as above plus data quality assurance and                                          package management)",
+                                  "Full RAP (as above plus unit testing and documentation)",
+                                  "R package"))
 ```
 
-## Slide title
+## Background
 
-- Bullet point
-- Bullet point with *italic text*
-- Bullet point with **bold text**
+- The Information Services Division (ISD) of the National Health Service (NHS) Scotland produces around 200 official and national statistics publications each year.
+- Traditional publication output is a **static pdf document** with accompanying **excel tables**.
 
-## Slide title
+```{r out.width = "50%", fig.align = 'center'}
+include_graphics(here::here("images", "pdf_report.png"))
+```
+
+
+## Traditional publication process
 
 ```{r out.width = "70%", fig.align = 'center'}
-include_graphics("images/value.png")
+include_graphics(here::here("images", "traditional_process.png"))
 ```
 
-## This slide has two columns 
-<!-- It seems easier to do with htmltags than with other ways --> 
-<div style="float: left; width: 50%; text-align: left">
-* Bullet point
-* Bullet point with *italic text*
-* Bullet point with **bold text**
-</div>
+- Complex (many steps between software)
+- Prone to error
+- Manual, menial tasks carried out by highly skilled people
+- Not reproducible or sustainable
 
-<div style="float: right; width: 50%;">
-```{r out.width = "100%", fig.align = 'right'}
-hist(rnorm(100))
+
+## The solution 
+```{r out.width = "60%", , fig.align = 'center'}
+include_graphics(here::here("images", "rap_matts.png"))
 ```
-</div>
 
-## Slide title
+[RAP companion](https://ukgovdatascience.github.io/rap_companion/)
 
-[ISD homepage](http://www.isdscotland.org/)
+Combined the principles of **reproducible research** with **data science tools and best practice**.
 
-## Slide title
+Basic principle is using one open-source piece of software for entire production process, from data extraction to final report.
 
+
+## What is a RAP project?
+
+- No (or few) manual steps = data and output produced using code
+- High quality and auditable = version control
+- Sustainable = peer review
+- "Bells and whistles" = _functions, documenting/testing these functions, package management and computing environment_
+
+```{r out.width = "60%", fig.align = 'center'}
+include_graphics(here::here("images", "rap.jpg"))
+```
+
+## What is a RAP project?
+
+```{r out.width = "100%", fig.align = 'center'}
+include_graphics(here::here("images", "new_process.png"))
+```
+
+## Case study: HSMR
+
+
+## Levels of RAP/automation
 ```{r, echo = FALSE}
-    kable(table_contents,
-          col.names = c("Column heading", "Column heading"),
-          format = "markdown")
+kable(automation_levels,
+      col.names = c("Level", "Description"),
+      format = "markdown")
 ```
