--- a/slides.Rmd
+++ b/slides.Rmd
@@ -11,22 +11,23 @@ output:
 ```{r setup, include = FALSE}
 # Load packages required
 library(knitr)
-library(magrittr)
 library(kableExtra)
 
 knitr::opts_chunk$set(echo = FALSE)
 
 # Create data frame for levels of automation table
-automation_levels <- data.frame(c(1:3, c("4a", "4b"), 5:7),
-                                c("Ad hoc R code",
-                                  "R project",
-                                  "R project under version control (VC)",
-                                  "R project under VC and peer reviewed (wrangling)",
-                                  "Replicable report in Rmarkdown (publication)",
-                                  "Near RAP (as above plus data quality assurance and                                          package management)",
-                                  "Full RAP (as above plus unit testing and documentation)",
-                                  "R package"))
+automation_levels <- data.frame(
+  c(1:3, c("4a", "4b"), 5:7),
+  c("Ad hoc R code",
+    "R project",
+    "R project under version control (VC)",
+    "R project under VC and peer reviewed (wrangling)",
+    "Replicable report in Rmarkdown (publication)",
+    "Near RAP (as above plus data quality assurance and package management)",
+    "Full RAP (as above plus unit testing and documentation)",
+    "R package"))
 ```
+
 
 ## Background
 
@@ -50,7 +51,8 @@ include_graphics(here::here("images", "traditional_process.png"))
 - Not reproducible or sustainable
 
 
-## The solution 
+## The solution
+
 ```{r out.width = "60%", , fig.align = 'center'}
 include_graphics(here::here("images", "rap_matts.png"))
 ```
@@ -73,18 +75,39 @@ Basic principle is using one open-source piece of software for entire production
 include_graphics(here::here("images", "rap.jpg"))
 ```
 
+
 ## What is a RAP project?
 
 ```{r out.width = "100%", fig.align = 'center'}
 include_graphics(here::here("images", "new_process.png"))
 ```
 
+
 ## Case study: HSMR
 
 
-## Levels of RAP/automation
+
+
+## [Levels of RAP/automation](https://www.isdscotland.org/About-ISD/Methodologies/_docs/Reproducible_Analytical_Pipelines_paper_v1.4.pdf)
+
 ```{r, echo = FALSE}
 kable(automation_levels,
       col.names = c("Level", "Description"),
       format = "markdown")
 ```
+
+
+## Scaling RAP
+
+- The [Transforming Publishing (TPP)](https://www.isdscotland.org/Products-and-Services/Transforming-Publishing-Programme/) team have begun to roll out RAP to other teams in ISD using a buddy system
+
+- One or two members of TPP 'buddy up' with another team to help them create a Reproducible Analytical Pipeline for their publication
+
+- As a minimum, we recommend teams aim for level 4 (a or b or both) as laid out in our [RAP paper](https://www.isdscotland.org/About-ISD/Methodologies/_docs/Reproducible_Analytical_Pipelines_paper_v1.4.pdf)
+
+
+## Links
+
+Email: [jack.hannah1@nhs.net](mailto:jack.hannah1@nhs.net)<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [david.caldwell1@nhs.net](mailto:david.caldwell1@nhs.net)<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [nss.isdtransformingpublishing@nhs.net](mailto:nss.isdtransformingpublishing@nhs.net)
+
+[Transforming Publishing on GitHub](https://github.com/NHS-NSS-transforming-publications)
